# seylane-vip-backend

./: .env  .env.example  README.md  alembic.ini  db.sqlite3  kill_port.py  pyproject.toml  run_dev.sh
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  db.py  main.py  schemas.py  security.py
app/api/: __init__.py  auth.py  dashboard.py  dependencies.py  display.py  missions.py  profile.py  purchase.py  referral.py
app/api/admin/: __init__.py
app/bot/: bot.py
app/models/: __init__.py  base.py  display.py  mission.py  notification.py  purchase.py  referral.py  stamp.py  user.py
app/services/: notification_service.py  stamp_service.py
